_generated-doc/3.20/config/quarkus-datasource.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-health-enabled]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-health-enabled[`quarkus.datasource.health.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.health.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether or not a health check is published in case the smallrye-health extension is present.

This is a global setting and is not specific to a datasource.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-metrics-enabled]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-metrics-enabled[`quarkus.datasource.metrics.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.metrics.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether or not datasource metrics are published in case a metrics extension is present.

This is a global setting and is not specific to a datasource.

NOTE: This is different from the "jdbc.enable-metrics" property that needs to be set on the JDBC datasource level to enable collection of metrics for that datasource.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-db-kind]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-db-kind[`quarkus.datasource.db-kind`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.db-kind+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".db-kind`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".db-kind+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The kind of database we will connect to (e.g. h2, postgresql...).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DB_KIND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DB_KIND+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-db-version]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-db-version[`quarkus.datasource.db-version`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.db-version+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".db-version`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".db-version+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The version of the database we will connect to (e.g. '10.0').

CAUTION: The version number set here should follow the same numbering scheme
as the string returned by `java.sql.DatabaseMetaData#getDatabaseProductVersion()`
for your database's JDBC driver.
This numbering scheme may be different from the most popular one for your database;
for example Microsoft SQL Server 2016 would be version `13`.

As a rule, the version set here should be as high as possible,
but must be lower than or equal to the version of any database your application will connect to.

A high version will allow better performance and using more features
(e.g. Hibernate ORM may generate more efficient SQL,
avoid workarounds and take advantage of more database features),
but if it is higher than the version of the database you want to connect to,
it may lead to runtime exceptions
(e.g. Hibernate ORM may generate invalid SQL that your database will reject).

Some extensions (like the Hibernate ORM extension)
will try to check this version against the actual database version on startup,
leading to a startup failure when the actual version is lower
or simply a warning in case the database cannot be reached.

The default for this property is specific to each extension;
the Hibernate ORM extension will default to the oldest version it supports.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DB_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DB_VERSION+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-health-exclude]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-health-exclude[`quarkus.datasource.health-exclude`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.health-exclude+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".health-exclude`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".health-exclude+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled.

By default, the health check includes all configured data sources (if it is enabled).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_HEALTH_EXCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_HEALTH_EXCLUDE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-datasource_quarkus-datasource-active]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-active[`quarkus.datasource.active`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.active+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".active`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".active+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether this datasource should be active at runtime.

See xref:datasource.adoc#datasource-active[this section of the documentation].


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_ACTIVE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|``true` if the URL is set, `false` otherwise`

a| [[quarkus-datasource_quarkus-datasource-username]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-username[`quarkus.datasource.username`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.username+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".username`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".username+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The datasource username


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-datasource_quarkus-datasource-password]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-password[`quarkus.datasource.password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.password+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".password`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The datasource password


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-datasource_quarkus-datasource-credentials-provider]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-credentials-provider[`quarkus.datasource.credentials-provider`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.credentials-provider+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".credentials-provider`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".credentials-provider+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The credentials provider name


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_CREDENTIALS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_CREDENTIALS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-datasource_quarkus-datasource-credentials-provider-name]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-credentials-provider-name[`quarkus.datasource.credentials-provider-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.credentials-provider-name+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".credentials-provider-name`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".credentials-provider-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The credentials provider bean name.

This is a bean name (as in `@Named`) of a bean that implements `CredentialsProvider`. It is used to select the credentials provider bean when multiple exist. This is unnecessary when there is only one credentials provider available.

For Vault, the credentials provider bean name is `vault-credentials-provider`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

h|[[quarkus-datasource_section_quarkus-datasource-devservices]] [.section-name.section-level0]##link:#quarkus-datasource_section_quarkus-datasource-devservices[Dev Services]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-enabled]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-enabled[`quarkus.datasource.devservices.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.enabled+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.enabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether this Dev Service should start with the application in dev mode or tests.

Dev Services are enabled by default
unless connection configuration (e.g. the JDBC URL or reactive client URL) is set explicitly.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-image-name]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-image-name[`quarkus.datasource.devservices.image-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.image-name+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.image-name`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.image-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The container image name for container-based Dev Service providers.

This has no effect if the provider is not a container-based database, such as H2 or Derby.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-container-env-environment-variable-name]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-container-env-environment-variable-name[`quarkus.datasource.devservices.container-env."environment-variable-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.container-env."environment-variable-name"+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.container-env."environment-variable-name"`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.container-env."environment-variable-name"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Environment variables that are passed to the container.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_ENV__ENVIRONMENT_VARIABLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_ENV__ENVIRONMENT_VARIABLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-container-properties-property-key]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-container-properties-property-key[`quarkus.datasource.devservices.container-properties."property-key"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.container-properties."property-key"+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.container-properties."property-key"`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.container-properties."property-key"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Generic properties that are passed for additional container configuration.

Properties defined here are database-specific and are interpreted specifically in each database dev service implementation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_PROPERTIES__PROPERTY_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_PROPERTIES__PROPERTY_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-properties-property-key]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-properties-property-key[`quarkus.datasource.devservices.properties."property-key"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.properties."property-key"+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.properties."property-key"`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.properties."property-key"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Generic properties that are added to the database connection URL.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PROPERTIES__PROPERTY_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PROPERTIES__PROPERTY_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-port]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-port[`quarkus.datasource.devservices.port`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.port+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.port`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.port+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Optional fixed port the dev service will listen to.

If not defined, the port will be chosen randomly.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-command]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-command[`quarkus.datasource.devservices.command`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.command+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.command`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.command+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The container start command to use for container-based Dev Service providers.

This has no effect if the provider is not a container-based database, such as H2 or Derby.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_COMMAND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_COMMAND+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-db-name]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-db-name[`quarkus.datasource.devservices.db-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.db-name+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.db-name`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.db-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The database name to use if this Dev Service supports overriding it.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_DB_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_DB_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-username]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-username[`quarkus.datasource.devservices.username`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.username+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.username`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.username+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The username to use if this Dev Service supports overriding it.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-password]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-password[`quarkus.datasource.devservices.password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.password+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.password`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The password to use if this Dev Service supports overriding it.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-init-script-path]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-init-script-path[`quarkus.datasource.devservices.init-script-path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.init-script-path+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.init-script-path`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.init-script-path+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The paths to SQL scripts to be loaded from the classpath and applied to the Dev Service database.

This has no effect if the provider is not a container-based database, such as H2 or Derby.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_INIT_SCRIPT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_INIT_SCRIPT_PATH+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-volumes-host-path]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-volumes-host-path[`quarkus.datasource.devservices.volumes."host-path"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.volumes."host-path"+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.volumes."host-path"`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.volumes."host-path"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The volumes to be mapped to the container.

The map key corresponds to the host location; the map value is the container location. If the host location starts with "classpath:", the mapping loads the resource from the classpath with read-only permission.

When using a file system location, the volume will be generated with read-write permission, potentially leading to data loss or modification in your file system.

This has no effect if the provider is not a container-based database, such as H2 or Derby.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_VOLUMES__HOST_PATH_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_VOLUMES__HOST_PATH_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-reuse]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-reuse[`quarkus.datasource.devservices.reuse`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.reuse+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.reuse`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.reuse+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether to keep Dev Service containers running *after a dev mode session or test suite execution*
to reuse them in the next dev mode session or test suite execution.

Within a dev mode session or test suite execution,
Quarkus will always reuse Dev Services as long as their configuration
(username, password, environment, port bindings, ...) did not change.
This feature is specifically about keeping containers running
**when Quarkus is not running** to reuse them across runs.

WARNING: This feature needs to be enabled explicitly in `testcontainers.properties`,
may require changes to how you configure data initialization in dev mode and tests,
and may leave containers running indefinitely, forcing you to stop and remove them manually.
See xref:databases-dev-services.adoc#reuse[this section of the documentation] for more information.

This configuration property is set to `true` by default,
so it is mostly useful to *disable* reuse,
if you enabled it in `testcontainers.properties`
but only want to use it for some of your Quarkus applications or datasources.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_REUSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_REUSE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus-datasource-devservices-show-logs]] [.property-path]##link:#quarkus-datasource_quarkus-datasource-devservices-show-logs[`quarkus.datasource.devservices.show-logs`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.devservices.show-logs+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".devservices.show-logs`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".devservices.show-logs+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether the logs should be consumed by the JBoss logger.

This has no effect if the provider is not a container-based database, such as H2 or Derby.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_SHOW_LOGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_SHOW_LOGS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`


|===

